<resources>
    <string name="app_name">Bullet_j</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_text">Login</string>
    <string name="register">Registrien</string>
    <string name="register_text">Register</string>
    <string name="kalender_text">Kalender</string>
    <string name="journaling_text">Journaling</string>
    <string name="setting_text">Setting</string>
    <string name="email">E-mail</string>
    <string name="password_widerholen">Password widerholen</string>
    <string name="geburstag">Geburstag</string>
    <string name="datenschutz">Datenschutzbestimmungen</string>
    <string name="journal">My Experience…</string>
    <string name="nameEvent">Name des Event</string>
    <string name="startort">Startort oder Call</string>
    <string name="notiz_art">Art der Notiz</string>
    <string name="begin">Beginn</string>
    <string name="end">Ende</string>
    <string name="begin_day">Begin on…</string>
    <string name="end_day">End on…</string>
    <string name="begin_time">Begin at…</string>
    <string name="end_time">End at…</string>
    <string name="wiederholung">Widerholung</string>
    <string name="wegzeit">Wegzeit</string>
    <string name="reminder">Reminder</string>
    <string name="Reminderme">Reminder</string>
    <string name="anzeigen_als">Anzeigen_als</string>
    <string name="save">Speichern</string>
    <string name="save_journal">Upload Your Journal</string>
    <string name="upload_gallery">Gallery</string>
    <string name="take_camara">Camara</string>
    <string name="delete">Löschen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="create_event">Your Event</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>
    <string name="title_journals">Journals</string>
    <string name="title_content">Contents</string>
    <string name="title_events">Events</string>
    <string name="title_event">Your Events</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="journaling">Journaling</string>
    <string name="kalender">kalender</string>
    <string name="hello">Hello</string>


</resources>