<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/root"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_login"
            android:icon="@drawable/ic_login"
            android:title="@string/title_login" />
        <item
            android:id="@+id/navigation_register"
            android:icon="@drawable/ic_register"
            android:title="@string/title_registration" />
    </group>
    <item android:title="@string/create_event">
        <menu>
            <item
                android:id="@+id/navigation_journal"
                android:icon="@drawable/journal_achieves"
                android:title="@string/title_journals" />
            <item
                android:id="@+id/navigation_event"
                android:icon="@drawable/event_archieves"
                android:title="@string/title_events" />
        </menu>

    </item>

</menu>