<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="stella.deborah.bulletjournaling.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/navigation_Activity"
        android:name="stella.deborah.bulletjournaling.LoginsFragment"
        android:label="activity_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_registration"
        android:name="stella.deborah.bulletjournaling.ui.registration.RegistrationsFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/navigation_einstellungen"
        android:name="stella.deborah.bulletjournaling.ui.home.HomeFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_journalings"
        android:name="stella.deborah.bulletjournaling.ui.journalings.JournalingsFragment"
        android:label="@string/journaling"
        tools:layout="@layout/fragment_journalings" />
    <fragment
        android:id="@+id/navigation_kalender"
        android:name="stella.deborah.bulletjournaling.ui.kalender.KalenderFragment"
        android:label="@string/kalender"
        tools:layout="@layout/fragment_kalender" />
    <fragment
        android:id="@+id/loginsFragment"
        android:name="stella.deborah.bulletjournaling.ui.login.LoginsFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
</navigation>