<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kalender.KalenderFragment"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/myevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myevent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/nameEvent"
        android:id="@+id/nameEvent_input_layout"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEvent_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/startort"
        android:id="@+id/startort_input_layout"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artNotiz_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/startort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startort_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/artNotiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/end"
        android:layout_width="63dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:text="@string/end"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/end_day"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/begin" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_border"
        android:minHeight="48dp"
        android:hint="@string/begin_time"
        android:textAlignment="center"
        android:onClick="showTimePickerDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/start_day"
        app:layout_constraintTop_toBottomOf="@+id/artNotiz_input_layout"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/start_day"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:hint="@string/begin_day"
        android:background="@drawable/edit_border"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:onClick="showDatePickerDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artNotiz_input_layout"
        tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

    <TextView
        android:id="@+id/end_day"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_border"
        android:minHeight="48dp"
        android:hint="@string/end_day"
        android:textAlignment="center"
        android:onClick="showDatePickerDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_day"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:text="@string/end_time"
        android:background="@drawable/edit_border"
        android:onClick="showTimePickerDialog"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toEndOf="@+id/end_day"
        app:layout_constraintTop_toBottomOf="@+id/start_time"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/begin"
        android:layout_width="63dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/begin"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/start_day"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artNotiz_input_layout"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/widerholung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:text="@string/wiederholung"
        app:layout_constraintEnd_toStartOf="@+id/reminder"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toEndOf="@+id/wegzeit"
        app:layout_constraintTop_toBottomOf="@+id/end_day"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/wegzeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:text="@string/wegzeit"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/widerholung"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_day"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:text="@string/reminder"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_time"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widerholung"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widerholung"
        app:layout_constraintVertical_bias="0.546" />



</androidx.constraintlayout.widget.ConstraintLayout>