<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationsFragment"
    android:paddingTop="60dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/person_icon"
        android:hint="@string/username"
        android:id="@+id/username_input_layout"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@android:drawable/sym_action_email"
        android:hint="@string/email"
        android:id="@+id/email_input_layout"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:id="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="0dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/password_input_layout"
       app:layout_constraintEnd_toEndOf="parent"
       app:startIconDrawable="@android:drawable/ic_menu_my_calendar"
       android:hint="@string/geburstag"
       android:id="@+id/birthday_input_layout"
       android:layout_marginTop="20dp"
       android:layout_height="wrap_content">
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/geburstag"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

   </com.google.android.material.textfield.TextInputLayout>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="221dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/datenschutz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_input_layout"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.0" />









</androidx.constraintlayout.widget.ConstraintLayout>